    PureStatelessExternalFunctions don't have access to the Static- and DynamicContext.
  * Renamed XQuery::serialize to XQuery::execute. The new method also implements
    the functionality of the XQuery::applyUpdates method (which was removed).
  * Added the serialize library to the built-in modules. The function
    util:serialize-to-string has been removed.

version 0.9.8-rev1 (2009.09.22)
  * bug fixes
    * fixed a crash caused by converting long integers (> 1024 digits) to string
    * the compile-only check reports the URI of the encapsulating entity in it's error report (used for XQDT semantic checking)
    * fixed 'for $x in () return $x/test' to return the empty sequence instead of raising a static error
    * fixed build using Xerces-C 3.0.1
    * fixed build for Mac OS X 10.6 (Snow Leopard)
    * improved error reporting in the command line utility
    * improved detection of the installed version of Xerces-C (raise an error if a wrong version is installed)

version 0.9.8 (2009.08.26)
  * More XQuery Scripting Features
		* default initialization for external variables
		* block local variables
  * XQuery 1.1
		* Support for the "validation as TypeName" feature
		* changed the try/catch syntax as specified in XQuery 1.1 (except the try- and catch expressions are ExprSingle and not Expr).
	* Examples for the Java API
	* Function library
  	* creating PDFs using XSL Formatting Objects (requires Java)
		* util:parse function
  	* converter functions to/from JSON or JsonML and XML
  	* function for sending simple text emails
  	* the util:tidy function returns a node instead of a string.
  	* XQDoc module http://www.zorba-xquery.com/zorba/xqdoc-functions
	* Added a loadProlog function to the static context.
  * Added support for XQueryX and XQueryX Update
	* Added compiled query persistence to the C++ API (XQuery::loadExecutionPlan() and XQuery::saveExecutionPlan())
  * Added a printPlan function to the XQuery class of the API.